@@ -1,5 +1,13 @@
 2010-04-25  James Youngman  <jay@gnu.org>
 
+	Remove some obsolete manual declarations of functions.
+	* file.cc: Don't manually declare stat.  Likewise for getpwuid.
+	* cssc.h: Don't undefine the TESTING macro; nobody defines it
+	either.  Don't undefine CONFIG_DECLARE_STAT,
+	CONFIG_DECLARE_GETPWUID, CONFIG_DECLARE_TIMEZONE,
+	CONFIG_DECLARE_TZSET,
+	* sysdep.h: Don't manually declare fdopen.
+
 	Include cssc headers where they are needed, not in cssc.h.
 	* my-getopt.cc: Include quit.h but not cssc.h.
 	* linebuf.cc: Include ioerr.h.
